--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
 Django==1.8.2
 Markdown==2.6.2
+PyJWT==1.3.0
+Pygments==2.0.2
+azure==0.11.0
+defusedxml==0.4.1
+django-braces==1.8.0
 django-filter==0.10.0
+django-oauth-toolkit==0.8.1
+django-pyodbc-azure==1.8.1.0
+django-rest-framework-social-oauth2==0.0.8
 djangorestframework==3.1.3
 drf-chaos==0.1.3
-wrapt==1.10.4
+oauthlib==0.7.2
+pyOpenSSL==0.15.1
+pyodbc==3.0.10
+python-social-auth==0.2.10
+python3-openid==3.0.5
+requests==2.7.0
+requests-oauthlib==0.5.0
+six==1.9.0
