--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ Thumbs.db
 
 *.swp
 *.pyc
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
