--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
-Django==1.8.2
-Markdown==2.6.2
-PyJWT==1.3.0
-Pygments==2.0.2
-azure==0.11.0
+awsebcli==3.4.5
+cement==2.4.0
 defusedxml==0.4.1
+Django==1.8.2
 django-braces==1.8.0
 django-filter==0.10.0
+django-mptt==0.7.4
 django-oauth-toolkit==0.8.1
-django-pyodbc-azure==1.8.1.0
 djangorestframework==3.1.3
+docker-py==1.1.0
+dockerpty==0.3.4
+docopt==0.6.2
 drf-chaos==0.1.3
+jmespath==0.7.1
+Markdown==2.6.2
 oauthlib==0.7.2
+pathspec==0.3.3
+psycopg2==2.6.1
+Pygments==2.0.2
+PyJWT==1.3.0
 pyOpenSSL==0.15.1
-pyodbc==3.0.10
+python-dateutil==2.4.2
 python-social-auth==0.2.10
 python3-openid==3.0.5
-requests==2.7.0
+PyYAML==3.11
+requests==2.6.2
 requests-oauthlib==0.5.0
 six==1.9.0
+texttable==0.8.3
+websocket-client==0.32.0
