--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,42 @@
 awsebcli==3.4.5
 cement==2.4.0
+cffi==1.1.2
+cryptography==0.9.1
 defusedxml==0.4.1
 Django==1.8.2
+django-appconf==1.0.1
 django-braces==1.8.0
+django-dual-authentication==1.0.0
 django-filter==0.10.0
+django-lazysignup==1.0.1
 django-mptt==0.7.4
 django-oauth-toolkit==0.8.1
+django-sslserver==0.15
 djangorestframework==3.1.3
 docker-py==1.1.0
 dockerpty==0.3.4
 docopt==0.6.2
 drf-chaos==0.1.3
+idna==2.0
 jmespath==0.7.1
 Markdown==2.6.2
 oauthlib==0.7.2
+opbeat==3.0
 pathspec==0.3.3
 psycopg2==2.6.1
+pyasn1==0.1.8
+pycparser==2.14
 Pygments==2.0.2
 PyJWT==1.3.0
 pyOpenSSL==0.15.1
 python-dateutil==2.4.2
 python-social-auth==0.2.10
 python3-openid==3.0.5
+pytz==2015.4
 PyYAML==3.11
 requests==2.6.2
 requests-oauthlib==0.5.0
 six==1.9.0
 texttable==0.8.3
 websocket-client==0.32.0
+wrapt==1.10.5
