--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-appconf==1.0.1
 django-braces==1.8.0
 django-dual-authentication==1.0.0
 django-filter==0.10.0
+django-filters==0.2.1
 django-lazysignup==1.0.1
 django-mptt==0.7.4
 django-oauth-toolkit==0.8.1
@@ -37,6 +38,7 @@ pytz==2015.4
 PyYAML==3.11
 requests==2.6.2
 requests-oauthlib==0.5.0
+selenium==2.46.0
 six==1.9.0
 texttable==0.8.3
 websocket-client==0.32.0
