--- a/.ebextensions/03_apache.config
+++ b/.ebextensions/03_apache.config
@@ -1,3 +1,5 @@
 container_commands:
   01_setup_apache:
     command: "cp .ebextensions/enable_mod_deflate.conf /etc/httpd/conf.d/enable_mod_deflate.conf"
+  02_wsgipass: 
+    command: 'echo "WSGIPassAuthorization On" >> ../wsgi.conf'
