--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.4.1
 Django==1.8.3
 django-appconf==1.0.1
 django-braces==1.8.0
+django-cors-headers==1.1.0
 django-dual-authentication==1.0.0
 django-durationfield==0.5.2
 django-filter==0.10.0
