Added threadedcomments project to local for edits. So far threaded commenting works but nests further than one node. Cloned django-threadedcomments as there were too many bugs and this is the most efficient way to get both threaded comments that are up to date and use validation from django_comments

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ cement==2.4.0
 cffi==1.1.2
 cryptography==0.9.1
 defusedxml==0.4.1
-Django==1.8.3
+Django==1.8.4
 django-appconf==1.0.1
 django-braces==1.8.0
+django-contrib-comments==1.6.1
 django-cors-headers==1.1.0
 django-dual-authentication==1.0.0
 django-durationfield==0.5.2
