--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-mptt==0.7.4
 django-oauth-toolkit==0.8.1
 django-sslserver==0.15
 djangorestframework==3.1.3
+djangorestframework-recursive==0.1.1
 docker-py==1.1.0
 dockerpty==0.3.4
 docopt==0.6.2
