--- a/fablersite/.ebextensions/02_python.config
+++ b/fablersite/.ebextensions/02_python.config
@@ -2,6 +2,8 @@ container_commands:
   01_migrate:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate"
     leader_only: true
+  02_collectstatic:
+    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
