EB deploy should now work from project root
Chris is never allowed to run eb init ever again

--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,9 +1,9 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py migrate"
+    command: "source /opt/python/run/venv/bin/activate && python fablersite/manage.py migrate --noinput"
     leader_only: true
   02_collectstatic:
-    command: "source /opt/python/run/venv/bin/activate && python manage.py collectstatic --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python fablersite/manage.py collectstatic --noinput"
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
@@ -11,7 +11,7 @@ option_settings:
     "PYTHONPATH": "/opt/python/current/app/fablersite:$PYTHONPATH"
     "ALLOWED_HOSTS": ".elasticbeanstalk.com"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: fablersite/wsgi.py
+    WSGIPath: fablersite/fablersite/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
