--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,6 +1,6 @@
 container_commands:
   01_migrate:
-    command: "source /opt/python/run/venv/bin/activate && python fablersite/manage.py migrate --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python fablersite/manage.py migrate"
     leader_only: true
   02_collectstatic:
     command: "source /opt/python/run/venv/bin/activate && python fablersite/manage.py collectstatic --noinput"
